cloudformation/vpc/security_group.yaml
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: "The VPC id associated security group"

  Project:
    Type: String
    Description: "The project name for provisioned this resources"
    Default: wsi

  Owner:
    Type: String
    Description: "The team name for owned this resources"
    Default: hmoon

  NamePrefix:
    Type: String
    Description: "The prefix of resource's Name tag"
    Default: wsi

  ApplicationPort:
    Type: Number
    Description: "Port number for the application"
    Default: 80

  # BastionSSHPort:
  #   Type: Number
  #   Description: "Port number for the bastion"
  #   Default: 22

  # BastionSSHCidr:
  #   Type: String
  #   Description: "Allowed Cidr IP range. https://checkip.amazonaws.com"
  #   Default: 0.0.0.0/0

Resources:
  #
  # ALB security group
  #
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "The security group for ALB"
      GroupName: !Sub "${NamePrefix}-alb-sg"
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-alb-sg"
        - Key: Project
          Value: !Ref Project
        - Key: Owner
          Value: !Ref Owner

  ALBSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "allow http from internet"
      GroupId: !Ref ALBSecurityGroup
      # SourceSecurityGroupId: !Ref ALBSecurityGroup
      # SourcePrefixListId: pl-63a5400a # you can check prefixlistID in console.
      CidrIp: 0.0.0.0/0
      IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
      FromPort: 80
      ToPort: 80

  ALBSecurityGroupEgress1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "allow application access"
      GroupId: !Ref ALBSecurityGroup
      DestinationSecurityGroupId: !Ref AppSecurityGroup
      # CidrIp: 0.0.0.0/0
      IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
      FromPort: !Ref ApplicationPort
      ToPort: !Ref ApplicationPort
  #
  # Application security group
  #
  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "The security group for application"
      GroupName: !Sub "${NamePrefix}-app-sg"
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-app-sg"
        - Key: Project
          Value: !Ref Project
        - Key: Owner
          Value: !Ref Owner

  AppSecurityGroupIngressALB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "allow ALB"
      GroupId: !Ref AppSecurityGroup
      SourceSecurityGroupId: !Ref ALBSecurityGroup
      # SourcePrefixListId: pl-63a5400a # you can check prefixlistID in console.
      # CidrIp: 0.0.0.0/0
      IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
      FromPort: !Ref ApplicationPort
      ToPort: !Ref ApplicationPort

  # AppSecurityGroupIngressBastion:
  #   Type: AWS::EC2::SecurityGroupIngress
  #   Properties:
  #     Description: "allow traffic from bastion"
  #     GroupId: !Ref AppSecurityGroup
  #     SourceSecurityGroupId: !Ref BastionSecurityGroup
  #     # SourcePrefixListId: pl-63a5400a # you can check prefixlistID in console.
  #     # CidrIp: 0.0.0.0/0
  #     IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
  #     FromPort: 22
  #     ToPort: 22

  AppSecurityGroupEgressHTTPS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "allow https"
      GroupId: !Ref AppSecurityGroup
      # DestinationSecurityGroupId: !Ref AppSecurityGroup
      CidrIp: 0.0.0.0/0
      IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
      FromPort: 443
      ToPort: 443

  AppSecurityGroupEgressHTTP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "allow http"
      GroupId: !Ref AppSecurityGroup
      # DestinationSecurityGroupId: !Ref AppSecurityGroup
      CidrIp: 0.0.0.0/0
      IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
      FromPort: 80
      ToPort: 80

  AppSecurityGroupEgressRDS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "allow RDS access"
      GroupId: !Ref AppSecurityGroup
      # DestinationSecurityGroupId: !Ref AppSecurityGroup
      CidrIp: 0.0.0.0/0
      IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
      FromPort: 3306
      ToPort: 3306

  #
  # RDS security group
  #
  # RDSSecurityGroup:
  #   Type: AWS::EC2::SecurityGroup
  #   Properties:
  #     GroupDescription: "The security group for RDS"
  #     GroupName: !Sub "${NamePrefix}-rds-sg"
  #     VpcId: !Ref VpcId
  #     Tags:
  #       - Key: Name
  #         Value: !Sub "${NamePrefix}-rds-sg"
  #       - Key: Project
  #         Value: !Ref Project
  #       - Key: Owner
  #         Value: !Ref Owner

  # RDSSecurityGroupIngress1:
  #   Type: AWS::EC2::SecurityGroupIngress
  #   Properties:
  #     Description: "allow application"
  #     GroupId: !Ref RDSSecurityGroup
  #     SourceSecurityGroupId: !Ref AppSecurityGroup
  #     # SourcePrefixListId: pl-63a5400a # you can check prefixlistID in console.
  #     # CidrIp: 0.0.0.0/0
  #     IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
  #     FromPort: 3306
  #     ToPort: 3306

  # RDSSecurityGroupEgress1:
  #   Type: AWS::EC2::SecurityGroupEgress
  #   Properties:
  #     Description: "allow all"
  #     GroupId: !Ref RDSSecurityGroup
  #     # DestinationSecurityGroupId: !Ref AppSecurityGroup
  #     CidrIp: 0.0.0.0/0
  #     IpProtocol: -1 # -1(all) , tcp , udp , icmp , icmpv6
  #     # FromPort: 443
  #     # ToPort: 443

  #
  # Bastion security group
  #
  # BastionSecurityGroup:
  #   Type: AWS::EC2::SecurityGroup
  #   Properties:
  #     GroupDescription: "The security group for Bastion"
  #     GroupName: !Sub "${NamePrefix}-bastion-sg"
  #     VpcId: !Ref VpcId
  #     Tags:
  #       - Key: Name
  #         Value: !Sub "${NamePrefix}-bastion-sg"
  #       - Key: Project
  #         Value: !Ref Project
  #       - Key: Owner
  #         Value: !Ref Owner

  # BastionSecurityGroupIngress1:
  #   Type: AWS::EC2::SecurityGroupIngress
  #   Properties:
  #     Description: "allow all traffic from local machine"
  #     GroupId: !Ref BastionSecurityGroup
  #     # SourceSecurityGroupId: !Ref AppSecurityGroup
  #     # SourcePrefixListId: pl-63a5400a # you can check prefixlistID in console.
  #     CidrIp: !Ref BastionSSHCidr
  #     IpProtocol: tcp # -1(all) , tcp , udp , icmp , icmpv6
  #     FromPort: !Ref BastionSSHPort
  #     ToPort: !Ref BastionSSHPort

  # BastionSecurityGroupEgress1:
  #   Type: AWS::EC2::SecurityGroupEgress
  #   Properties:
  #     Description: "allow all"
  #     GroupId: !Ref BastionSecurityGroup
  #     # DestinationSecurityGroupId: !Ref AppSecurityGroup
  #     CidrIp: 0.0.0.0/0
  #     IpProtocol: -1 # -1(all) , tcp , udp , icmp , icmpv6
  #     # FromPort: 443
  #     # ToPort: 443
